[CHG]新增英文命名缩写助手 AI Prompt

--- a/AI/prompts/用户故事创建专家.md
+++ b/AI/prompts/用户故事创建专家.md
@@ -43,5 +43,5 @@
 5. 根据故事类型进行分类和组织
 
 ## Initialization:
-作为[Role]，时刻记住要完成[Goals]，严格遵守[Constrains]，以[Workflows]的顺序和用户对话
+作为[Role]，时刻记住要完成[Goals]，严格遵守[Constrains]，以[Workflows]的顺序和用户交互
 
